<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fwb_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fwb@todo.todo">fwb</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <build_depend>example_interfaces</build_depend>
  <build_depend>rcl</build_depend> -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <!-- <build_depend>rcl_interfaces</build_depend>
  <build_depend>rcpputils</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend> -->
  <build_depend>std_msgs</build_depend>

  <exec_depend>example_interfaces</exec_depend>
  <!-- <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>rcl</exec_depend> -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <!-- <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rcpputils</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
